[metadata]
name = reportlab_stubs
version = 3.6.9
description = Typing stubs for ReportLab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/reportlab-stubs
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = BSD License
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python

[options]
packages =
    reportlab-stubs
install_requires =
    reportlab
include_package_data = True

[options.extras_require]
dev =
    black
    flake8
    flake8-black
    flake8-pyi
    mypy
    setuptools
    types-setuptools
    wheel

[options.package_data]
* = **/*.pyi

[mypy]
python_version = 3.7
show_error_codes = True
pretty = True

[tool:black]
line-length = 88

[tool:isort]
profile = black

[flake8]
max-line-length = 88
